kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https-56kbps
  hostnames:
    - "alertmanager.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https-56kbps
  hostnames:
    - "prometheus.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: https-56kbps
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
